# lp2graph

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/skills/lp2graph-dev/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  design-decision.yml  new-formulation.yml
.github/workflows/: ci.yml  docs.yml  release.yml
corpus/: Gurobi__modeling-examples.json  IBMDecisionOptimization__Decision-Optimization-with-CPLEX-samples.LICENSE  IBMDecisionOptimization__Decision-Optimization-with-CPLEX-samples.json  INDEX.md  INFORMSJoC__2021.0094.json  INFORMSJoC__2023.0014.LICENSE  INFORMSJoC__2023.0014.json  INFORMSJoC__2023.0391.LICENSE  INFORMSJoC__2023.0391.json  INFORMSJoC__2023.0404.json  INFORMSJoC__2024.0698.LICENSE  INFORMSJoC__2024.0698.json  METHODOLOGY.md  Yinwenxu-1212__crewScheduling.json  cda-tum__mtct.json  iitis__quantum-stochastic-optimization-railways.json  iitis__railways_HOBO.json  lintim__openlintim.json  marcotallone__railway-scheduling.json  mesenrj__transit-network-optimization.json  michieluithetbroek__A-MDVRP.json  romain-montagne__vrpy.json  sma-software__openviriato.algorithm-platform.showcase.spot.json
corpus/categorization/: TAXONOMY.md  categorize.py  categorized_corpus.json
corpus/paper/: paper.md
corpus/validation/: .gitignore  README.md
corpus/validation/codec_pipeline/: README.md  run.py
docs/: DECISIONS.md  STACK.md  add-a-formulation.md  catalog.md  data-model.md  design-context.md  extraction-report.md  index.md  interop.md  metrics.md  mining.md  text-graph-interface.md  v1-acceptance.md  validation.md  views.md
docs/adr/: 0001-build-tool.md  0002-internal-graph.md  0003-license.md  0004-schema-versioning.md  0005-viewer-hosting.md  0006-determinism.md  0007-optional-deps-lazy-import.md  0008-pulp4-forward-compatible-solver.md  0009-ingest-untrusted-input-hardening.md
docs/demo/: configurator.html  explore.html  index.html
examples/: 01-load-and-validate.py  02-derive-three-views.py  03-compute-metrics.py  04-export-to-pyg.py  05-add-a-new-formulation.md
examples/railway-bigm-milp/: ModelOrTools.java  README.md  build_pdf.py  data.json  model.lp  model.mps  model_ampl.mod  model_cvxpy.py  model_docplex.py  model_gams.gms  model_glpk.mod  model_gurobi.py  model_jump.jl  model_matlab.m  model_minizinc.mzn  model_ompr.R  model_opl.mod  model_ortools.cpp  model_ortools.py  model_pulp.py  model_pyomo.py  model_python_mip.py  model_zimpl.zpl  problem.tex
formulations/constraints/: mip_2_8_pesp.json
legacy/: README.md
legacy/extracted_flat/: __init__.py  constraints.py  metrics.py  schema.py
lp2graph/: parser.py  visualization.py
schema/: canonical.schema.json
src/lp2graph/: __init__.py  cli.py
src/optgraph/: __init__.py  cli.py
tests/: conftest.py  test_bigm.py  test_codec.py  test_describe.py  test_export.py  test_metrics.py  test_render.py  test_schema.py  test_solve.py  test_views.py
tests/interop/: _models.py  conftest.py  test_convert_cli.py  test_grounded.py  test_object_apis.py  test_text_formats.py
tests/mining/: test_cluster.py  test_corpus_manager.py  test_homologize.py  test_ingest.py  test_isomorphism.py  test_label.py
tests/validation/: test_detect.py  test_pipeline.py
ui/: HOWTO.md  README.md  requirements.txt  run.sh  server.py
ui/static/: app.js  index.html  styles.css
viewer/: index.html
(+122 files in other folders)
