[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "lp2graph"
version = "0.2.0"
description = "Typed-graph representation of LP, MIP, and MILP formulations."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "lp2graph contributors" }]
keywords = ["optimization", "linear-programming", "milp", "graph", "gnn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
networkx = ["networkx>=3.0"]
pyg = ["torch>=2.0", "torch_geometric>=2.4"]
dgl = ["dgl>=2.0", "torch>=2.0"]
pyomo = ["pyomo>=6.7"]
all = [
    "networkx>=3.0",
    "torch>=2.0",
    "torch_geometric>=2.4",
    "pyomo>=6.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "jsonschema>=4.0",
    "networkx>=3.0",
    "pre-commit>=3.6",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
lp2graph = "lp2graph.cli:main"

[project.urls]
Homepage = "https://github.com/joernmht/lp2graph"
Documentation = "https://github.com/joernmht/lp2graph#readme"
Issues = "https://github.com/joernmht/lp2graph/issues"
Source = "https://github.com/joernmht/lp2graph"

[tool.hatch.build.targets.wheel]
packages = ["src/lp2graph"]

[tool.hatch.build.targets.sdist]
include = [
    "src/lp2graph",
    "schema",
    "formulations",
    "docs",
    "tests",
    "examples",
    "viewer",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["lp2graph"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/lp2graph"]
plugins = ["pydantic.mypy"]
exclude = ["legacy/"]

[[tool.mypy.overrides]]
module = ["networkx.*", "torch.*", "torch_geometric.*", "dgl.*", "pyomo.*", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/lp2graph"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
